--- a/style.css
+++ b/style.css
@@ -8,3 +8,33 @@
     text-decoration: none;
 
 }
+
+header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    display:flex ;
+    align-items:center ;
+    justify-content: space-between;
+    padding: 20px 10px;
+}
+
+.logo img{
+    max-width: 120px;
+    height: auto;
+}
+
+.navmenu{
+    display: flex;
+}
+
+.navmenu a{
+    color: #2c2c2c;
+    font-size: 16px;
+    text-transform: capitalize;
+    padding: 10px, 20px;
+    font-weight: 400;
+    transition: all .42s ease;
+}
