navmenu link changes

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header{
     color: #2c2c2c;
     font-size: 16px;
     text-transform: capitalize;
-    padding: 10px, 20px;
+    padding: 10px 20px;
     font-weight: 400;
     transition: all .42s ease;
 }
