--- a/style.css
+++ b/style.css
@@ -68,3 +68,18 @@ header{
     z-index: 10001;
     cursor: pointer;
 }
+
+section{
+    padding: 5% 10%;
+}
+
+.main-home{
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/herobanner.png);
+    background-position: center;
+    background-size: cover;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    align-items: center;
+}
