--- a/style.css
+++ b/style.css
@@ -99,3 +99,10 @@ section{
     font-weight: 600;
     margin: 6px 0 10px;
 }
+
+.main-text p{
+    color: #333c56;
+    font-size: 20px;
+    font-style: italic;
+    margin-bottom: 20px;
+}
