adding down arrow in html.index and styling it

--- a/style.css
+++ b/style.css
@@ -126,3 +126,17 @@ section{
 .main-btn i{
     vertical-align: middles;
 }
+
+.down-arrow{
+    position: absolute;
+    top: 85%;
+    right: 11%;
+}
+
+.down-arrow i{
+    font-size: 30px;
+    color: #2c2c2c;
+    border: 2px solid #2c2c2c;
+    border-radius: 50px;
+    padding: 12px 12px;
+}
