--- a/style.css
+++ b/style.css
@@ -133,10 +133,16 @@ section{
     right: 11%;
 }
 
-.down-arrow i{
+.down i{
     font-size: 30px;
     color: #2c2c2c;
     border: 2px solid #2c2c2c;
     border-radius: 50px;
     padding: 12px 12px;
+}
+
+.down i:hover{
+    background-color: #2c2c2c;
+    color: #fff;
+    transition: all .42s ease;
 }
