--- a/style.css
+++ b/style.css
@@ -146,3 +146,9 @@ section{
     color: #fff;
     transition: all .42s ease;
 }
+
+header.sticky{
+    background: #fff;
+    padding: 20px 10%;
+    box-shadow: 0px 0px 10px rgb(0 0 0/10%);
+}
