--- a/style.css
+++ b/style.css
@@ -152,3 +152,16 @@ header.sticky{
     padding: 20px 10%;
     box-shadow: 0px 0px 10px rgb(0 0 0/10%);
 }
+
+/*trending-section-css*/
+
+.center-text h2{
+    color: #111;
+    font-size: 28px;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+.center-text span{
+    color: #ee1c47;
+}
