--- a/style.css
+++ b/style.css
@@ -179,7 +179,24 @@ header.sticky{
 }
 
 .row img{
-    width:100px;
+    width:200px;
     height: auto;
     transition: all .40s;
+}
+
+.row img:hover{
+    transform:scale(0.9);
+}
+
+.product-text h5{
+    position: absolute;
+    top: 13px;
+    left: 13px;
+    color:#fff ;
+    font-size: 12px;
+    font-weight: 500;
+    text-transform: uppercase;
+    background-color: #27b737;
+    padding: 3px 10px;
+    border-radius: 2px;
 }
