--- a/style.css
+++ b/style.css
@@ -243,8 +243,16 @@ header.sticky{
 }
 
 .reviews img{
-    width: 200px;
+    width: 150px;
     height: auto;
     border-radius: 50px;
     margin: 10px 0;
+}
+
+.reviews p{
+    color: #707070;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25px;
+    margin-bottom: 10px;
 }
