reviewers name styling

--- a/style.css
+++ b/style.css
@@ -256,3 +256,11 @@ header.sticky{
     line-height: 25px;
     margin-bottom: 10px;
 }
+
+reviews h2{
+    font-size: 22px;
+    color: #000;
+    font-weight: 400;
+    text-transform: capitalize;
+    margin-bottom: 2px;
+}
