--- a/style.css
+++ b/style.css
@@ -264,3 +264,19 @@ reviews h2{
     text-transform: capitalize;
     margin-bottom: 2px;
 }
+
+/*update-section-css*/
+
+.up-center-text h2{
+    text-align: center;
+    color: #111;
+    font-size: 25px;
+    text-transform: capitalize ;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+.cart img{
+    width: 380px;
+    height: auto;
+    border-radius: 5px;
+}
