--- a/style.css
+++ b/style.css
@@ -280,3 +280,21 @@ reviews h2{
     height: auto;
     border-radius: 5px;
 }
+
+.updatee-cart{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(380px,auto));
+    gap: 1rem;
+}
+.cart h5{
+    color: #636372;
+    font-size: 14px;
+    text-transform: capitalize;
+    font-weight: 500s;
+}
+
+.cart h4{
+    color: #111;
+    font-size: 18px;
+    font-weight: 600;
+}
