--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section{
 }
 
 .main-text h5{
-    color: #ee1c47;
+    color: #190404;
     font-size: 16px;
     text-transform: capitalize;
     font-weight: 500;
@@ -101,7 +101,7 @@ section{
 }
 
 .main-text p{
-    color: #333c56;
+    color: #000000;
     font-size: 20px;
     font-style: italic;
     margin-bottom: 20px;
@@ -277,11 +277,11 @@ reviews h2{
 }
 .cart img{
     width: 380px;
-    height: auto;
+    height: 400px;
     border-radius: 5px;
 }
 
-.updatee-cart{
+.update-cart{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(380px,auto));
     gap: 1rem;
@@ -297,4 +297,18 @@ reviews h2{
     color: #111;
     font-size: 18px;
     font-weight: 600;
+}
+
+.cart p{
+    color: #707070;
+    font-size: 15px;
+    max-width: 380px;
+    line-height: 25px;
+    margin-bottom: 12px;
+}
+
+.cart h6{
+    color:#151515;
+    font-size: 14px;
+    font-weight: 500;
 }
