adding more info and styling contact, contact-info,first-info

--- a/style.css
+++ b/style.css
@@ -312,3 +312,27 @@ reviews h2{
     font-size: 14px;
     font-weight: 500;
 }
+
+
+/*contact Section*/
+.contact{
+    background-color: #f3f4f6;
+}
+
+.contact-info{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(160px,auto));
+    gap:1rem;
+}
+
+.first-info mg{
+    width: 140px;
+    height: auto;
+}
+.contact-info h4{
+   color: #212529;
+   font-size: 14px;
+   text-transform: uppercase;
+   margin-bottom: 10px; 
+}
+
