--- a/style.css
+++ b/style.css
@@ -361,3 +361,38 @@ reviews h2{
     transform: scale(1.3);
 }
 
+.end-text{
+    background-color: #edfff1;
+    text-align: center;
+    padding:20px;
+}
+
+.end-text p{
+    color: #111;
+    text-transform: capitalize;
+}
+
+
+/* Responsive CSS*/
+
+@media(max-width:890px){
+    header{
+        padding:20px 3%;
+        transition: .4ss;
+    }
+}
+
+@media(max-width:630px){
+    .main-text h1{
+        font-size: 50px;
+        transition: .4s;
+    }
+    .main-text p{
+        font-size:18px;
+        transition: .4s;
+    }
+    .main-btn{
+        padding: 10px 20px;
+        transition: .4s;
+    }
+}
