--- a/style.css
+++ b/style.css
@@ -396,3 +396,20 @@ reviews h2{
         transition: .4s;
     }
 }
+
+@media(max-width:750px)
+{
+    .navmenu{
+        position:absolute;
+        top:100%;
+        right: 0;
+        width:300px;
+        height: 130vh;
+        background: #edfff1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 120px 30px;
+        transition: all .42s;
+    }
+}
