--- a/style.css
+++ b/style.css
@@ -402,7 +402,7 @@ reviews h2{
     .navmenu{
         position:absolute;
         top:100%;
-        right: 0;
+        right: -100%;
         width:300px;
         height: 130vh;
         background: #edfff1;
@@ -412,4 +412,12 @@ reviews h2{
         padding: 120px 30px;
         transition: all .42s;
     }
+    .navmenu a{
+        display: block;
+        margin: 18px 0;
+    }
+    .navmenu.open{
+        right: 0;
+    }
+    
 }
